# logos-simple-module

./: .gitignore  .gitmodules  CMakeLists.txt  flake.nix  metadata.json  simple_module_interface.h  simple_module_plugin.cpp  simple_module_plugin.h
cmake/: run_generator.cmake
nix/: package.nix
scripts/: README.md  build.sh  compile.sh  local.sh
